Added grouptables in models.py and groups.html file

--- a/mysite/history.html
+++ b/mysite/history.html
@@ -1,6 +1,4 @@
-5,goat,juice,45,hello,Cinema,11/23/19
-7,goat,hello,-25,hi,Travel,11/23/19
-9,goat,hello,40,zjnjZ,Restaurant,11/23/19
-11,goat,hello,-7,uuui,Others,11/23/19
-13,goat,hello,20,hello,Others,11/23/19
-15,goat,juice,30,cinema,Travel,11/23/19
+<head><title>history</title></head>'
+'<body>5,goat,juice,45,hello,Cinema,11/23/19,<br>7,goat,hello,-25,hi,Travel,11/23/19,<br>9,goat,hello,40,zjnjZ,Restaurant,11/23/19,<br>11,goat,hello,-7,uuui,Others,11/23/19,<br>13,goat,hello,20,hello,Others,11/23/19,<br>15,goat,juice,30,cinema,Travel,11/23/19,<br>'
+'<button onclick='myFunction()'>Get Your Stats</button></body>'
+'<script>function myFunction() {window.print();}</script>
